--- a/app.json
+++ b/app.json
@@ -4,13 +4,8 @@
     "slug": "notepad",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/notepad.png",
     "userInterfaceStyle": "light",
-    "splash": {
-      "image": "",
-      "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
-    },
     "assetBundlePatterns": [
       "**/*"
     ],
